"配置文件学习，新增random其他测试"

--- a/SpringBootDemoDay1/src/main/resources/config/application.properties
+++ b/SpringBootDemoDay1/src/main/resources/config/application.properties
@@ -5,4 +5,5 @@ server.port=8085
 com.test.name=zsq
 com.test.age=22
 com.test.desc=${com.test.name}----${com.test.age}
-com.test.random=${random.value}
+#每次开启项目产生一个，重复访问不会改变
+com.test.random=${random.int[10,100]} 
