--- a/SpringBootDemoDay1/src/main/resources/config/application.properties
+++ b/SpringBootDemoDay1/src/main/resources/config/application.properties
@@ -1,9 +1,54 @@
+#for test   因为加入https，自动变为https的端口
+server.port=443
+server.http.port=80
+
+#for log
+#spring.profiles.active=live
+spring.profiles.active=dev
+
+#for dev tools 热部署,要进行配置
+#第一句开启热部署，修改代码后不需要重启项目 ，第二句监控文件夹，修改该文件夹下才会启动热部署
+spring.devtools.restart.enable=true
+spring.devtools.restart.additional-paths=src/main/java
+ 
+#for ssl  配置自定义证书
+server.ssl.key-store=classpath:.keystore
+server.ssl.key-store-password=111111
+
+# for data source
+# mysql 5
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+# mysql 6 +
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/lib?useUnicode=true&characterEncoding=utf8&useSSL=false&serverTimezone=GMT%2B8
+spring.datasource.username=root
+spring.datasource.password=636636
+
+# hikari pool   连接池
+#连接池最大连接数，默认为10
+spring.datasource.hikari.maximum-pool-size=20
+#最小空闲连接数
+spring.datasource.hikari.minimum-idle=5
+#空闲连接存活最大时间
+spring.datasource.hikari.idle-timeout=180000
+#开启自动提交
+spring.datasource.hikari.auto-commit=true
+
+# for mybatis
+# 开启驼峰法 一般直接使用注解方式
+mybatis.configuration.map-underscore-to-camel-case=true
+
+#下面是通过mapper文件来运行，现在一般直接使用注解
+mybatis.type-aliases-package=com.zsq.SpringBootDemo.modules.*.entity
+mybatis.mapper-locations=classpath:mapper/*Mapper.xml
+
+
+
 #for test
-server.port=8085
-
-
 com.test.name=zsq
 com.test.age=22
 com.test.desc=${com.test.name}----${com.test.age}
 #每次开启项目产生一个，重复访问不会改变
 com.test.random=${random.int[10,100]} 
+
+
