--- a/SpringBootDemoDay1/src/main/resources/config/application.properties
+++ b/SpringBootDemoDay1/src/main/resources/config/application.properties
@@ -1,8 +1,8 @@
-#for test   因为加入https，自动变为https的端口
+#for server   因为加入https，自动变为https的端口
 server.port=443
 server.http.port=80
 
-#for log
+#for env
 #spring.profiles.active=live
 spring.profiles.active=dev
 
@@ -41,6 +41,12 @@ mybatis.configuration.map-underscore-to-camel-case=true
 #下面是通过mapper文件来运行，现在一般直接使用注解
 mybatis.type-aliases-package=com.zsq.SpringBootDemo.modules.*.entity
 mybatis.mapper-locations=classpath:mapper/*Mapper.xml
+
+#for jpa
+#动态更新，生成表
+#指定为innodb，支持事务
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 
 
 
