--- a/SpringBootDemoDay1/src/main/resources/config/application.properties
+++ b/SpringBootDemoDay1/src/main/resources/config/application.properties
@@ -45,10 +45,22 @@ mybatis.mapper-locations=classpath:mapper/*Mapper.xml
 #for jpa
 #动态更新，生成表
 #指定为innodb，支持事务
-#spring.jpa.hibernate.ddl-auto=update
-#spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 
+# for Redis
+spring.redis.database=0
+spring.redis.host=127.0.0.1
+spring.redis.port=6379
+spring.redis.password=111111
+spring.redis.timeout=300
 
+# for Lettuce
+spring.redis.lettuce.pool.max-active=8
+spring.redis.lettuce.pool.max-wait=10000
+spring.redis.lettuce.pool.max-idle=8
+spring.redis.lettuce.pool.min-idle=0
+spring.redis.lettuce.shutdown-timeout=100
 
 #for test
 com.test.name=zsq
