--- a/SpringBootDemoDay1/src/main/resources/config/application.properties
+++ b/SpringBootDemoDay1/src/main/resources/config/application.properties
@@ -49,18 +49,27 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 
 # for Redis
-spring.redis.database=0
-spring.redis.host=127.0.0.1
-spring.redis.port=6379
-spring.redis.password=111111
-spring.redis.timeout=300
+#spring.redis.database=0
+#spring.redis.host=127.0.0.1
+#spring.redis.port=6379
+#spring.redis.password=111111
+#spring.redis.timeout=300
 
 # for Lettuce
-spring.redis.lettuce.pool.max-active=8
-spring.redis.lettuce.pool.max-wait=10000
-spring.redis.lettuce.pool.max-idle=8
-spring.redis.lettuce.pool.min-idle=0
-spring.redis.lettuce.shutdown-timeout=100
+#spring.redis.lettuce.pool.max-active=8
+#spring.redis.lettuce.pool.max-wait=10000
+#spring.redis.lettuce.pool.max-idle=8
+#spring.redis.lettuce.pool.min-idle=0
+#spring.redis.lettuce.shutdown-timeout=100
+
+# thymeleaf springboot 支持的前端页面
+#开启页面热部署，在开发环境下通常是false
+spring.thymeleaf.cache=false
+spring.thymeleaf.enabled=true
+spring.thymeleaf.encoding=UTF-8
+spring.thymeleaf.mode=HTML5
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
 
 #for test
 com.test.name=zsq
