"aop面向切面，文件的上传"

--- a/SpringBootDemoDay1/src/main/resources/config/application.properties
+++ b/SpringBootDemoDay1/src/main/resources/config/application.properties
@@ -71,6 +71,16 @@ spring.thymeleaf.mode=HTML5
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
 
+#for upload size  -1代表不限制文件大小
+#spring.servlet.multipart.maxFileSize=30MB
+#spring.servlet.multipart.maxRequestSize=30MB
+spring.servlet.multipart.maxFileSize=-1
+spring.servlet.multipart.maxRequestSize=-1
+
+
+
+
+
 #for test
 com.test.name=zsq
 com.test.age=22
