"通过配置静态资源路径，来代替绝对路径的写法"

--- a/SpringBootDemoDay1/src/main/resources/config/application.properties
+++ b/SpringBootDemoDay1/src/main/resources/config/application.properties
@@ -78,7 +78,10 @@ spring.servlet.multipart.maxFileSize=-1
 spring.servlet.multipart.maxRequestSize=-1
 
 
-
+# spring local resource config
+spring.resource.path=/upload/**
+spring.resource.folder.windows=D:/java/upload/
+spring.resource.folder.linux=/upload/
 
 
 #for test
