"文件上传，下载，以及监控，并在其中加入一些自己的理解注释，可能存在一些问题"

--- a/SpringBootDemoDay1/src/main/resources/config/application.properties
+++ b/SpringBootDemoDay1/src/main/resources/config/application.properties
@@ -79,10 +79,13 @@ spring.servlet.multipart.maxRequestSize=-1
 
 
 # spring local resource config
-spring.resource.path=/upload/**
-spring.resource.folder.windows=D:/java/upload/
+spring.resource.path=/java/upload/
+spring.resource.path.pattern=/java/upload/**
+spring.resource.folder.windows=d:/java/upload/
 spring.resource.folder.linux=/upload/
 
+# for actuator 监控点
+management.endpoints.web.exposure.include=*
 
 #for test
 com.test.name=zsq
