--- a/SpringBootDemoDay1/pom.xml
+++ b/SpringBootDemoDay1/pom.xml
@@ -80,6 +80,12 @@
 		    <groupId>org.apache.commons</groupId>
 		    <artifactId>commons-lang3</artifactId>
 		</dependency>
+		
+		<!-- actuator -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-actuator</artifactId>
+		</dependency>
 
 		<!-- test -->
 		<dependency>
