"身份资源验证"

--- a/SpringBootDemoDay1/src/main/resources/config/application.properties
+++ b/SpringBootDemoDay1/src/main/resources/config/application.properties
@@ -87,6 +87,9 @@ spring.resource.folder.linux=/upload/
 # for actuator 监控点
 management.endpoints.web.exposure.include=*
 
+#for shiro
+shiro.web.enabled=true
+
 #for test
 com.test.name=zsq
 com.test.age=22
